# pos-sem

./: CMakeLists.txt  main.c
client/: CMakeLists.txt  client.c  client.h  main.c  ui.c  ui.h
client/game/: game_handler.c  game_handler.h
client/graphics/: graphics.c  graphics.h  object.c  object.h
client/graphics/objects/: circle.c  circle.h
client/menu/: basic_menu.c  basic_menu.h  input_menu.c  input_menu.h  list_menu.c  list_menu.h  menu.c  menu.h  message_menu.c  message_menu.h  renderer.c  renderer.h
libconnection/: CMakeLists.txt  connection.c  connection.h  server.c  server.h
libconnection/socket/: socket_connection.c  socket_connection.h  socket_server.c  socket_server.h
libdraw/: CMakeLists.txt  draw.c  draw.h
libgraphics/: CMakeLists.txt  graphics.c  graphics.h  graphics_draw.c  graphics_draw.h
libinput/: CMakeLists.txt  input.c  input.h
libshared/: CMakeLists.txt  command_types.h  game.c  game.h  term.c  term.h  termbox2.h
libstructures/: CMakeLists.txt  sll.c  sll.h  syn_buffer.c  syn_buffer.h
server/: CMakeLists.txt  main.c  server.h  server_handler.c  server_handler.h
